@@ -219,6 +219,7 @@ Stephane Bailliez
 stephan
 Stephan Michels
 Stephen Chin
+Stephen Goetze
 Steve Cohen
 Steve Loughran
 Steve Morin
